<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <parent>
        <groupId>uk.ac.ebi.intact.maven</groupId>
        <artifactId>intact-master</artifactId>
        <version>24</version>
    </parent>

    <modelVersion>4.0.0</modelVersion>

    <groupId>uk.ac.ebi.intact.bridges</groupId>
    <artifactId>bridges-master</artifactId>
    <packaging>pom</packaging>
    <version>2.2.0</version>

    <name>IntAct Bridges</name>
    <description>Bridges Master POM</description>
    <url>http://www.ebi.ac.uk/~intact/devsite/bridges</url>

    <properties>
        <currentVersion>${project.version}</currentVersion>
        <spring.version>4.3.30.RELEASE</spring.version>
        <junit.version>4.13.2</junit.version>
        <uniprot.japi.version>1.1.2</uniprot.japi.version>
        <uniprot-kraken.version>2014.09</uniprot-kraken.version>
    </properties>

    <scm>
        <connection>scm:git:https://github.com/EBI-IntAct/intact-bridges.git</connection>
        <developerConnection>scm:git:https://github.com/EBI-IntAct/intact-bridges.git</developerConnection>
        <url>https://github.com/EBI-IntAct/intact-bridges</url>
    </scm>

    <modules>
        <module>intact-citexplore</module>
        <module>intact-uniprot</module>
        <module>intact-unisave</module>
        <module>blast-mapping-parser</module>
        <module>intact-blast</module>
        <module>intact-google</module>
        <module>intact-ontologies</module>
    </modules>


    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <!--mvn jgitflow:release-start -Dgit.user=xxxx -Dgit.password=xxxx-->
                <!--mvn jgitflow:release-finish -Djava.net.preferIPv4Stack=true -Dmaven.javadoc.skip=true -Dmaven.test.skip=true -Dgit.user=xxxx -Dgit.password=xxxx-->
                <groupId>external.atlassian.jgitflow</groupId>
                <artifactId>jgitflow-maven-plugin</artifactId>
                <version>1.0-m5.1</version>
                <configuration>
                    <flowInitContext>
                        <masterBranchName>master</masterBranchName>
                        <developBranchName>develop</developBranchName>
                        <featureBranchPrefix>feature-</featureBranchPrefix>
                        <releaseBranchPrefix>release-</releaseBranchPrefix>
                        <hotfixBranchPrefix>hotfix-</hotfixBranchPrefix>
                        <versionTagPrefix>${project.artifactId}-</versionTagPrefix>
                    </flowInitContext>
                    <!-- see goals wiki page for configuration options -->
                    <allowUntracked>true</allowUntracked>
                    <username>${git.user}</username>
                    <password>${git.password}</password>
                    <pullMaster>true</pullMaster>
                    <pullDevelop>true</pullDevelop>
                    <pushReleases>true</pushReleases>
                    <pushHotfixes>true</pushHotfixes>
                    <pushFeatures>true</pushFeatures>
                </configuration>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.cxf</groupId>
                    <artifactId>cxf-codegen-plugin</artifactId>
                    <version>3.3.0</version>
                    <executions>
                        <execution>
                            <id>generate-sources</id>
                            <phase>generate-sources</phase>
                            <goals>
                                <goal>wsdl2java</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <dependencyManagement>
        <dependencies>

            <!--Add it to have the same version of
            com.fasterxml.jackson in japi and ols-client (inside ontology-manager).
            It could be removed in the future if both libraries share a common
            version. This version solved a known security vulnerability -->
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>2.13.3</version>
            </dependency>

            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-annotations</artifactId>
                <version>2.13.3</version>
            </dependency>

            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>2.13.3</version>
            </dependency>

            <dependency>
                <groupId>log4j</groupId>
                <artifactId>log4j</artifactId>
                <version>1.2.17</version>
                <exclusions>
                    <exclusion>
                        <groupId>javax.jms</groupId>
                        <artifactId>jms</artifactId>
                    </exclusion>
                </exclusions>
                <optional>true</optional>
            </dependency>
            <dependency>
                <groupId>commons-logging</groupId>
                <artifactId>commons-logging</artifactId>
                <version>1.1.1</version>
                <optional>true</optional>
            </dependency>

            <dependency>
                <groupId>xfire</groupId>
                <artifactId>xfire-jsr181-api</artifactId>
                <version>1.0-M1</version>
            </dependency>

            <!-- 3rd party -->
            <dependency>
                <groupId>commons-lang</groupId>
                <artifactId>commons-lang</artifactId>
                <version>2.6</version>
            </dependency>
        </dependencies>

    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- JAVA 11 -->
        <dependency>
            <groupId>javax.jws</groupId>
            <artifactId>jsr181-api</artifactId>
            <version>1.0-MR1</version>
        </dependency>
        <dependency>
            <groupId>jakarta.xml.bind</groupId>
            <artifactId>jakarta.xml.bind-api</artifactId>
            <version>3.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jaxb</groupId>
            <artifactId>jaxb-runtime</artifactId>
            <version>2.3.6</version>
        </dependency>
        <dependency>
            <groupId>javax.xml.ws</groupId>
            <artifactId>jaxws-api</artifactId>
            <version>2.3.1</version>
        </dependency>
        <dependency>
            <groupId>com.sun.xml.ws</groupId>
            <artifactId>jaxws-ri</artifactId>
            <version>2.3.3</version>
            <type>pom</type>
        </dependency>

    </dependencies>

    <repositories>
        <repository>
            <id>ebi-repo</id>
            <name>ebi-repo</name>
            <url>https://www.ebi.ac.uk/intact/maven/nexus/content/repositories/ebi-repo/</url>
        </repository>
        <repository>
            <id>nexus-ebi-release-repo</id>
            <url>https://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-repo/</url>
        </repository>
        <repository>
            <id>nexus-ebi-snapshot-repo</id>
            <url>https://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-snapshots/</url>
        </repository>
    </repositories>

    <!-- Overwrites the previous repositories-->
    <distributionManagement>
        <!-- EBI repo -->
        <repository>
            <id>pst-release</id>
            <name>EBI Nexus Repository</name>
            <url>https://www.ebi.ac.uk/Tools/maven/repos/content/repositories/pst-release/</url>
        </repository>
        <!-- EBI SNAPSHOT repo -->
        <snapshotRepository>
            <uniqueVersion>false</uniqueVersion>
            <id>pst-snapshots</id>
            <name>EBI Nexus Snapshots Repository</name>
            <url>https://www.ebi.ac.uk/Tools/maven/repos/content/repositories/pst-snapshots/</url>
        </snapshotRepository>
    </distributionManagement>
</project>